--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
-{% block title %}Hello, world {% endblock %}
-{% block headmessage %} Hello, {{name}} {% endblock %}
+{% block title %}AI人工智慧班 {% endblock %}
+{% block headmessage %} 這是我的教學網站 {{name}} {% endblock %}
 {% block main %}
   <hr>
       特別號：{{special}}<br>
